Update projects, deploy gh-pages

--- a/index.html
+++ b/index.html
@@ -6,29 +6,33 @@
     <title>Document</title>
     <style>
         @import url('https://fonts.googleapis.com/css?family=Roboto');
-
-        * {
-            font-family: Roboto, Arial;
-        }
+        * { font-family: Roboto, Arial;}
+        a {text-decoration: none;}
+        a:hover {text-decoration: underline;}
     </style>
 </head>
 <body>
     <h1>Projects</h1>
-    <a href="js_exercises_top/rock_paper_scissors/index.html">Rock Paper Scissors</a>
+    <a href="./etch_sketch/index.html">Etch A Sketch</a>
+    <ul>
+        <li>Events + delegation</li>
+        <li>Style using JS</li>
+        <li>More DOM</li>
+    </ul>
+    <a href="./rock_paper_scissors/index.html">Rock Paper Scissors</a>
     <ul>
         <li>First JS project</li>
         <li>Dynamic UI updates</li>
     </ul>
-    <a href="landing_page/index.html">Static Landing Page</a>
+    <a href="./landing_page/index.html">Static Landing Page</a>
     <ul>
         <li>CSS, UX</li>
     </ul>
-    <a href="weather_app/index.html">Weather App (broken?)</a>
+    <a href="./weather_app/index.html">Weather App</a>
     <ul>
         <li>External API calls</li>
         <li>Promises, etc.</li>
         <li>DOM</li>
-
     </ul>
 </body>
 </html>
