--- a/calc/index.html
+++ b/calc/index.html
@@ -17,22 +17,22 @@
             <button id="button-clear">AC</button>
             <button id="button-pm">±</button>
             <button id="button-percent">%</button>
-            <button id="button-divide" class="operation">÷</button>
+            <button id="button-divide" class="operator">÷</button>
             <button id="button-7" class="digit">7</button>
             <button id="button-8" class="digit">8</button>
             <button id="button-9" class="digit">9</button>
-            <button id="button-multiply" class="operation">×</button>
+            <button id="button-multiply" class="operator">×</button>
             <button id="button-4" class="digit">4</button>
             <button id="button-5" class="digit">5</button>
             <button id="button-6" class="digit">6</button>
-            <button id="button-subtract" class="operation">-</button>
+            <button id="button-subtract" class="operator">-</button>
             <button id="button-1" class="digit">1</button>
             <button id="button-2" class="digit">2</button>
             <button id="button-3" class="digit">3</button>
-            <button id="button-add" class="operation">+</button>
+            <button id="button-add" class="operator">+</button>
             <button id="button-0" class="digit">0</button>
             <button id="button-decimal" class="digit">.</button>
-            <button id="button-equals" class="operation">=</button>
+            <button id="button-equals" class="operator">=</button>
         </div>
 
     </main>
