--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Projects</title>
     <style>
         @import url('https://fonts.googleapis.com/css?family=Roboto');
         * { font-family: Roboto, Arial;}
@@ -13,26 +13,42 @@
 </head>
 <body>
     <h1>Projects</h1>
-    <a href="./etch_sketch/index.html">Etch A Sketch</a>
-    <ul>
-        <li>Events + delegation</li>
-        <li>Style using JS</li>
-        <li>More DOM</li>
-    </ul>
-    <a href="./rock_paper_scissors/index.html">Rock Paper Scissors</a>
-    <ul>
-        <li>First JS project</li>
-        <li>Dynamic UI updates</li>
-    </ul>
-    <a href="./landing_page/index.html">Static Landing Page</a>
-    <ul>
-        <li>CSS, UX</li>
-    </ul>
-    <a href="./weather_app/index.html">Weather App</a>
-    <ul>
-        <li>External API calls</li>
-        <li>Promises, etc.</li>
-        <li>DOM</li>
-    </ul>
+    <div class="project-item">
+        <a href="./calc/index.html">Calc (Calculator)</a>
+        <ul>
+            <li>Event handling + delegation</li>
+            <li>CSS grids</li>
+            <li>State machines</li>
+        </ul>
+    </div>
+    <div class="project-item">
+        <a href="./etch_sketch/index.html">Etch A Sketch</a>
+        <ul>
+            <li>Events + delegation</li>
+            <li>Style using JS</li>
+            <li>More DOM</li>
+        </ul>
+    </div>
+    <div class="project-item">
+        <a href="./rock_paper_scissors/index.html">Rock Paper Scissors</a>
+        <ul>
+            <li>First JS project</li>
+            <li>Dynamic UI updates</li>
+        </ul>
+    </div>
+    <div class="project-item">
+        <a href="./landing_page/index.html">Static Landing Page</a>
+        <ul>
+            <li>CSS, UX</li>
+        </ul>
+    </div>
+    <div class="project-item">
+        <a href="./weather_app/index.html">Weather App</a>
+        <ul>
+            <li>External API calls</li>
+            <li>Promises, etc.</li>
+            <li>DOM</li>
+        </ul>
+    </div>
 </body>
 </html>
